# proyecto_api

./: Cargo.toml
sql/: base.sql
src/: main.rs
src/config/: config.rs
src/controller/: autores_controller.rs  editoriales_controller.rs  mod.rs  prestamos_controller.rs  usuario_controller.rs
src/models/: autores.rs  editoriales.rs  libros.rs  mod.rs  prestamos.rs  usuario.rs
src/repository/: autores_repository.rs  editoriales_repository.rs  libros_repository.rs  mod.rs  prestamos_repository.rs  usuario_repository.rs
src/service/: autores_service.rs  editoriales_service.rs  libros_service.rs  mod.rs  prestamos_service.rs  usuario_service.rs
