[package]
name = "proyecto"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8"
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
rand = "0.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time"] }
dotenvy = "0.15"
time = { version = "0.3", features = ["serde"] }